GNU bug report logs - #14870
gcd and lcm do not work on inexact integers

Previous Next

Package: guile;

Reported by: Göran Weinholt <goran <at> weinholt.se>

Date: Mon, 15 Jul 2013 13:15:01 UTC

Severity: normal

Done: Mark H Weaver <mhw <at> netris.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 14870 in the body.
You can then email your comments to 14870 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-guile <at> gnu.org:
bug#14870; Package guile. (Mon, 15 Jul 2013 13:15:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Göran Weinholt <goran <at> weinholt.se>:
New bug report received and forwarded. Copy sent to bug-guile <at> gnu.org. (Mon, 15 Jul 2013 13:15:03 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Göran Weinholt <goran <at> weinholt.se>
To: bug-guile <at> gnu.org
Subject: gcd and lcm do not work on inexact integers
Date: Mon, 15 Jul 2013 15:00:53 +0200
[Message part 1 (text/plain, inline)]
Hello schemers,

the gcd and lcm procedures from (rnrs) do not work on inexact integers:

scheme@(guile-user)> (import (rnrs))
scheme@(guile-user)> (lcm 32.0 -36)
ERROR: In procedure lcm:
ERROR: In procedure lcm: Wrong type argument in position 1: 32.0

This is an example from r6rs. Tested with Guile 2.0.9.22-7e816-dirty.

Regards,

-- 
Göran Weinholt <goran <at> weinholt.se>
"Did the writer not know that the use of the term 'the real world' is usually
interpreted as a symptom of rabid anti-intellectualism, or did he not mind?"
-- prof.dr. Edsger W. Dijkstra
[Message part 2 (application/pgp-signature, inline)]

Reply sent to Mark H Weaver <mhw <at> netris.org>:
You have taken responsibility. (Tue, 16 Jul 2013 10:44:02 GMT) Full text and rfc822 format available.

Notification sent to Göran Weinholt <goran <at> weinholt.se>:
bug acknowledged by developer. (Tue, 16 Jul 2013 10:44:03 GMT) Full text and rfc822 format available.

Message #10 received at 14870-done <at> debbugs.gnu.org (full text, mbox):

From: Mark H Weaver <mhw <at> netris.org>
To: Göran Weinholt <goran <at> weinholt.se>
Cc: 14870-done <at> debbugs.gnu.org
Subject: Re: bug#14870: gcd and lcm do not work on inexact integers
Date: Tue, 16 Jul 2013 06:43:27 -0400
Göran Weinholt <goran <at> weinholt.se> writes:
> the gcd and lcm procedures from (rnrs) do not work on inexact integers:

Fixed in 3bbca1f7237c0e9d9419eaea8f274c9cd7314f04.

    Thanks!
      Mark




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Tue, 13 Aug 2013 11:24:04 GMT) Full text and rfc822 format available.

This bug report was last modified 10 years and 259 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.